# neural-network-rust

./: Cargo.toml
examples/: watch_movie.rs
src/: lib.rs  main.rs  matrix.rs  neural_network.rs  neural_network_sync.rs
