[package]
name = "neunet"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tokio = { version = "1", features = ["macros", "rt", "sync"]}
tokio = { version = "1", features = ["full"]}
env_logger = "0.11"
